--- a/charts/factorio-server-charts/values.yaml
+++ b/charts/factorio-server-charts/values.yaml
@@ -1,11 +1,15 @@
+
+# Number of replicas to create (only 1 is supported)
 replicaCount: 1
 
 image:
   repository: "factoriotools/factorio"
+  # Container image pull policy
   pullPolicy: Always
   # Overrides the image tag whose default is the chart appVersion.
   tag: "latest"
 
+# Security options the operator container should run with
 securityContext:
   runAsUser: 1000
   fsGroup: 2000
@@ -13,103 +17,95 @@ securityContext:
 service:
   type: LoadBalancer
   port: 30000
-
-resources:
+# Compute Resources required by the operator container
+resources: # +doc-gen:break
   requests:
     memory: 512Mi
     cpu: 500m
+# Node labels for pod assignment
+# Example:
+# nodeSelector:  
+#  beta.kubernetes.io/os: linux
+#  beta.kubernetes.io/arch: amd64
+nodeSelector: {} # +doc-gen:break
 
-nodeSelector: {}
-
+# Tolerations for pod assignment
 tolerations: []
 
+# Affinity rules for pod assignment
 affinity: {}
 
-livenessProbe:
-  initialDelaySeconds: 30
-  periodSeconds: 5
-  failureThreshold: 10
-  successThreshold: 1
-  timeoutSeconds: 1
-readinessProbe:
-  initialDelaySeconds: 30
-  periodSeconds: 5
-  failureThreshold: 10
-  successThreshold: 1
-  timeoutSeconds: 1
+# Sets the data persistence volume configuration
 persistence:
   dataDir: 
     Size: "1Gi"
     existingClaim:
   storageClass: longhorn
 factorioServer:
-  #Your Instance's Name
-  instance_name: "Factorio"
-  #Your Instance's Description
-  instance_description: "Factorio running on Kubernetes"
   #specify a save name
   save_name: "replaceMe"
   #Generate a New Save
   generate_new_save: true
   #Update mods on start
-  #update_mods_on_start: false
-  #As of 0.17 a new environment variable was added UPDATE_MODS_ON_START which if set to true will cause 
-  #the mods get to updated on server start. If set a valid Factorio Username and Token must be supplied 
-  #or else the server will not start. They can either be set as docker secrets, environment variables, 
-  #or pulled from the server-settings.json file.
+  update_mods_on_start: false
   #lets the game know if you want to load the latest save
   load_latest_save: true
+  # Location of the configuration files that are generated
   config_path: /srv 
 
-serverSettingsJson:
-  name: Name of the game as it will appear in the game listing
-  description: Description of the game that will appear in the listing
+serverSettings:
+  #Your Instance's Name
+  name: Factorio
+  #Your Instance's Description
+  description: "Factorio running on Kubernetes"
   tags:
   - game
   - tags
-  # _comment_max_players: Maximum number of players allowed, admins can join even a full server. 0 means unlimited.
+  # Maximum number of players allowed, admins can join even a full server. 0 means unlimited.
   max_players: 0
-  # _comment_visibility:
-  #- 'public: Game will be published on the official Factorio matching server'
-  #- 'lan: Game will be broadcast on LAN'
+  # Game visibility
   visibility:
+    # Game will be published on the official Factorio matching server'
     public: true
+    # Game will be broadcast on LAN'
     lan: true
-  #_comment_credentials: Your factorio.com login credentials. Required for games with visibility public
+  # Your factorio.com login credentials. Required for games with visibility public
   username: ''
   password: ''
-  #_comment_token: Authentication token. May be used instead of 'password' above.
+  # Authentication token. May be used instead of 'password' above.
   token: ''
+  # password required to log into the factorio server
   game_password: ''
-  #_comment_require_user_verification: When set to true, the server will only allow clients that have a valid Factorio.com account
+  # When set to true, the server will only allow clients that have a valid Factorio.com account
   require_user_verification: true
-  #_comment_max_upload_in_kilobytes_per_second: optional, default value is 0. 0 means unlimited.
+  # optional, default value is 0. 0 means unlimited.
   max_upload_in_kilobytes_per_second: 0
-  #_comment_max_upload_slots: optional, default value is 5. 0 means unlimited.
+  # optional, default value is 5. 0 means unlimited.
   max_upload_slots: 5
-  #_comment_minimum_latency_in_ticks: optional one tick is 16ms in default speed, default value is 0. 0 means no minimum.
+  # optional one tick is 16ms in default speed, default value is 0. 0 means no minimum.
   minimum_latency_in_ticks: 0
-  #_comment_ignore_player_limit_for_returning_players: Players that played on this map already can join even when the max player limit was reached.
+  # Players that played on this map already can join even when the max player limit was reached.
   ignore_player_limit_for_returning_players: false
-  #_comment_allow_commands: possible values are, true, false and admins-only
+  # possible values are, true, false and admins-only
   allow_commands: admins-only
-  #_comment_autosave_interval: Autosave interval in minutes
+  # Autosave interval in minutes
   autosave_interval: 10
-  #_comment_autosave_slots: server autosave slots, it is cycled through when the server autosaves.
+  # server autosave slots, it is cycled through when the server autosaves.
   autosave_slots: 5
-  #_comment_afk_autokick_interval: How many minutes until someone is kicked when doing nothing, 0 for never.
+  # How many minutes until someone is kicked when doing nothing, 0 for never.
   afk_autokick_interval: 0
-  #_comment_auto_pause: Whether should the server be paused when no players are present.
+  # Whether should the server be paused when no players are present.
   auto_pause: true
+  # specifies if anyone can pause or only admins
   only_admins_can_pause_the_game: true
-  #_comment_autosave_only_on_server: Whether autosaves should be saved only on server or also on all connected clients. Default is true.
+  # Whether autosaves should be saved only on server or also on all connected clients. Default is true.
   autosave_only_on_server: true
-  #_comment_non_blocking_saving: Highly experimental feature, enable only at your own
+  #  Highly experimental feature, enable only at your own
   #  risk of losing your saves. On UNIX systems, server will fork itself to create an
   #  autosave. Autosaving on connected Windows clients will be disabled regardless of
   #  autosave_only_on_server option.
   non_blocking_saving: false
-  #_comment_segment_sizes: Long network messages are split into segments that are sent
+  #  Long network messages are split into segments that are sent
   #  over multiple ticks. Their size depends on the number of peers currently connected.
   #  Increasing the segment size will increase upload bandwidth requirement for the server
   #  and download bandwidth requirement for clients. This setting only affects server
@@ -119,23 +115,24 @@ serverSettingsJson:
   minimum_segment_size_peer_count: 20
   maximum_segment_size: 100
   maximum_segment_size_peer_count: 10
-    
+
+# Password and port for the rcon service
 rcon:
   password: "01234567890123456"
   port: 27015
 
 map_gen_settings:
-  #_terrain_segmentation_comment: The inverse of 'water scale' in the map generator GUI.
+  #The inverse of 'water scale' in the map generator GUI.
   terrain_segmentation: 1
-  #_water_comment:
-  #- The equivalent to 'water coverage' in the map generator GUI. Higher coverage means
+  #  The equivalent to 'water coverage' in the map generator GUI. Higher coverage means
   #  more water in larger oceans.
-  #- Water level = 10 * log2(this value)
+  #  Water level = 10 * log2(this value)
   water: 1
-  #_comment_width+height: Width and height of map, in tiles; 0 means infinite
+  # Width and height of map, in tiles; 0 means infinite
   width: 0
+  # Width and height of map, in tiles; 0 means infinite
   height: 0
-  #_starting_area_comment: Multiplier for 'biter free zone radius'
+  # Multiplier for 'biter free zone radius'
   starting_area: 1
   peaceful_mode: false
   autoplace_controls:
