Add annotations support

--- a/charts/factorio-server-charts/values.yaml
+++ b/charts/factorio-server-charts/values.yaml
@@ -41,6 +41,7 @@ service:
   #   port: 34197
   ## LoadBalancer setup
   # type: LoadBalancer
+  annotations: {}
 
 
 ## Compute Resources required by the operator container
