--- a/.github/workflows/chart_workflow.yaml
+++ b/.github/workflows/chart_workflow.yaml
@@ -16,21 +16,25 @@ jobs:
 
       - name: "Set Up Helm"
         uses: azure/setup-helm@v3.3
+        if: github.ref != 'refs/heads/main'
         with:
           version: v3.4.1
 
       - name: "Set Up Python"
         uses: actions/setup-python@v4.2.0
+        if: github.ref != 'refs/heads/main'
         with:
           python-version: 3.9
 
       - name: "Set up chart-testing"
         uses: helm/chart-testing-action@v2.3.0
+        if: github.ref != 'refs/heads/main'
         with:
           version: v3.3.0
 
       - name: "Run chart-testing (list-changed)"
         id: list-changed
+        if: github.ref != 'refs/heads/main'
         run: |
           changed=$(ct list-changed --config ct.yaml)
           if [[ -n "$changed" ]]; then
@@ -39,15 +43,15 @@ jobs:
 
       - name: "Run chart-testing (lint)"
         run: ct lint --config ct.yaml
-        if: steps.list-changed.outputs.changed == 'true'
+        if: steps.list-changed.outputs.changed == 'true' && github.ref != 'refs/heads/main'
 
       - name: Create kind cluster
         uses: helm/kind-action@v1.4.0
-        if: steps.list-changed.outputs.changed == 'true'
+        if: steps.list-changed.outputs.changed == 'true' && github.ref != 'refs/heads/main'
 
       - name: Run chart-testing (install)
         run: ct install --config ct.yaml
-        if: steps.list-changed.outputs.changed == 'true'
+        if: steps.list-changed.outputs.changed == 'true' && github.ref != 'refs/heads/main'
 
   release:
     runs-on: ubuntu-latest
