--- a/charts/factorio-server-charts/Chart.yaml
+++ b/charts/factorio-server-charts/Chart.yaml
@@ -25,7 +25,9 @@ version: 1.0.14
 # This is the version number of the application being deployed. This version number should be
 # incremented each time you make changes to the application. Versions are not expected to
 # follow Semantic Versioning. They should reflect the version the application is using.
-maintainers: # (optional)
+
+# (optional)
+maintainers:
   - name: James Rhoat
     email: James@Rhoat.com
 appVersion: 1.0.0
