Revert RCON default password

--- a/charts/factorio-server-charts/values.yaml
+++ b/charts/factorio-server-charts/values.yaml
@@ -206,7 +206,7 @@ rcon:
   passwordSecret: ""
 
   # Password for rcon
-  password: null
+  password: "CHANGEMECHANGEME"
 
   # rcon port
   port: 30100
