--- a/charts/factorio-server-charts/templates/deployment.yaml
+++ b/charts/factorio-server-charts/templates/deployment.yaml
@@ -19,7 +19,7 @@ spec:
       labels:
         app: {{ template "factorio-server-charts.fullname" . }}
     spec:
-      {{- if eq (.Values.service.type "NodePort") }}
+      {{- if eq .Values.service.type "NodePort" }}
       hostNetwork: true
       {{- else }}
       hostNetwork: false
