Updated Testing Methods and Default ports
- Changed helm test from wget (not useful with UDP ports) to RCON
- Changed deployment.yaml, service.yaml and rcon-service.yaml so that Factorio listens on its default port, but the 'external' port is customizable via the services
- Added CI values to be used when using CT install
- Fixed GH Workflow when merging into main branch

--- a/charts/factorio-server-charts/templates/deployment.yaml
+++ b/charts/factorio-server-charts/templates/deployment.yaml
@@ -99,9 +99,9 @@ spec:
           runAsUser: 0
         ports:
         - name: factorio
-          containerPort: {{ .Values.service.port }}
+          containerPort: 34197
           protocol: UDP
-        - containerPort: {{ .Values.rcon.port }}
+        - containerPort: 27015
           protocol: TCP
         resources:
 {{ toYaml .Values.resources | indent 10 }}
@@ -125,8 +125,6 @@ spec:
           value: {{ .Values.factorioServer.generate_new_save | quote }}
         - name: LOAD_LATEST_SAVE
           value: {{ .Values.factorioServer.load_latest_save | quote }}
-        - name: PORT
-          value: {{ .Values.service.port | quote }}
         - name: CONFIG
           value: /factorio/configs
 {{- if .Values.nodeSelector }}
