--- a/charts/factorio-server-charts/templates/tests/test-connection.yaml
+++ b/charts/factorio-server-charts/templates/tests/test-connection.yaml
@@ -11,5 +11,5 @@ spec:
     - name: rcon
       image: outdead/rcon
       command: ['./rcon']
-      args: ['-a','{{ include "factorio-server-charts.fullname" . }}-rcon:{{ .Values.rcon.port }}','-p','{{ .Values.rcon.password }}','/s','Test']
+      args: ['-a','{{ include "factorio-server-charts.fullname" . }}-rcon:{{ .Values.rcon.port }}','-p','{{ .Values.rcon.password }}','-t','rcon','-T','180s','/s','Test']
   restartPolicy: Never
