Added Chart icon

--- a/charts/factorio-server-charts/Chart.yaml
+++ b/charts/factorio-server-charts/Chart.yaml
@@ -32,3 +32,5 @@ maintainers:
     email: James@Rhoat.com
 appVersion: 1.0.0
 deprecated: false
+
+icon: https://factorio.com/static/img/factorio-wheel.png
